@@ -359,6 +359,9 @@
 	Fixed directories not being accounted for in estimates.  Thanks to
 	justpretending2.
 
+	Fixed global version of 'viewcolumns' not validating its value.  Thanks to
+	Vadim Curcă.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
